--- a/src/components/MovieDetailPage/MovieDetailsPage.module.scss
+++ b/src/components/MovieDetailPage/MovieDetailsPage.module.scss
@@ -1,1 +1,7 @@
-.MovieDetailPage {}
+.MovieDetailPage {
+  color: #d9d2d2;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 1rem;
+}
