--- a/src/components/MovieItem/MovieItem.module.scss
+++ b/src/components/MovieItem/MovieItem.module.scss
@@ -102,7 +102,8 @@
 }
 
 .vote {
-  display: block;
+  display: flex;
+  align-items: center;
   width: 55px;
   text-align: right;
   font-size: .9em;
@@ -112,8 +113,8 @@
   content: "";
   display: block;
   float: left;
-  width: 20px;
-  height: 20px;
+  width: 15px;
+  height: 15px;
   background: center / contain no-repeat url("img/star.png");
 }
 
