--- a/src/components/MovieItem/MovieItem.module.scss
+++ b/src/components/MovieItem/MovieItem.module.scss
@@ -104,8 +104,8 @@
 .vote {
   display: flex;
   align-items: center;
+  justify-content: flex-end;
   width: 55px;
-  text-align: right;
   font-size: .9em;
 }
 
