--- a/src/components/MovieItem/MovieItem.module.scss
+++ b/src/components/MovieItem/MovieItem.module.scss
@@ -146,8 +146,8 @@
 
 @media screen and (max-width: 768px) {
   .info, .info:before, .Poster, .Poster img , .Poster img:after {
-    width: 150px;
-    height: 225px;
+    width: 180px;
+    height: auto;
   }
   .footInfo {
      width: 100%;
