--- a/src/components/MovieHeader/MovieHeader.module.scss
+++ b/src/components/MovieHeader/MovieHeader.module.scss
@@ -6,7 +6,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 1.5rem;
+  padding: .5rem;
 }
 
 .NavBrand {
@@ -28,7 +28,7 @@
   display: flex;
   height: 30px;
   background: #343434;
-  border-radius: 15px;
+  border-radius: 5px;
   align-items: center;
   transition: color ease-in-out 0.5s;
   padding: 0 1em;
@@ -49,7 +49,7 @@
 }
 
 .Search input {
-  border-radius: 15px 0 0 15px;
+  border-radius: 5px 0 0 5px;
   flex-grow:2;
   border:none;
   background: #d9d2d2;
@@ -67,7 +67,7 @@
 .Search button {
   background: center / 15px no-repeat url("img/search.png") #d9d2d2;
   color: #757575;
-  border-radius: 0 15px 15px 0;
+  border-radius: 0 5px 5px 0;
   cursor: pointer;
   border: none;
 }
